@@ -1,5 +1,11 @@
 2007-07-17  Sebastian Marsching  <sebastian.marsching@1und1.de>
 
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java:
+	Create comment node in result document when a 404 error occurs.
+	 
+	* src/de/schlund/pfixxml/AbstractXMLServlet.java: 
+	Render pages that have valid page targets but are not known by ContextXMLServlet. 
+	
 	* src/de/schlund/pfixcore/editor2/frontend/handlers/CommonUploadIncludePartHandler.java:
 	Fixed bug in editor causing empty include parts not to be saved correctly.
 	
